--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,15 +54,9 @@ if(APPLE OR WINDOWS)
     cocos_mark_multi_resources(common_res_files RES_TO "Resources" FOLDERS ${GAME_RES_FOLDER})
 endif()
 
-# add cross-platforms source files and header files 
-list(APPEND GAME_SOURCE
-     Classes/AppDelegate.cpp
-     Classes/HelloWorldScene.cpp
-     )
-list(APPEND GAME_HEADER
-     Classes/AppDelegate.h
-     Classes/HelloWorldScene.h
-     )
+# add cross-platforms source files and header files
+file(GLOB_RECURSE GAME_HEADER Classes/*.h)
+file(GLOB_RECURSE GAME_SOURCE Classes/*.cpp)
 
 if(ANDROID)
     # change APP_NAME to the share library name for Android, it's value depend on AndroidManifest.xml
